# pixiv-analysis

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: collect_daily.yml  collect_hourly.yml  collect_weekly.yml
data/: pixiv_stats.db
src/: config.py  db.py  main.py  pixiv_client.py
src/collectors/: __init__.py  accounts.py  posts.py
tests/: test_config.py  test_db.py  test_pixiv_client.py  test_ui_data_access.py  test_ui_transform.py
ui/: app.py  components.py  data_access.py  transform.py
